--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,12 @@ pool:
 
 steps:
 
+- task: Bash@3
+  displayName: 'Running random Shell script'
+  inputs:
+    targetType: 'inline' # Optional. Options: filePath, inline
+    script: 'echo hello Superman'
+
 - task: NodeTool@0
   inputs:
     versionSpec: '10.x'
