--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,5 @@ steps:
     npm install
     npm run build
     npm test
+    'echo hello Spidy'
   displayName: 'npm install and build'
-
-- script: |
-  displayName: 'Spiderman Shell scripts test'
-    script: 'echo hello Spidy'
