--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,6 @@ steps:
     npm install
     npm run build
     npm test
-    'echo hello Spidy'
   displayName: 'npm install and build'
+
+- script: echo 'Hello SPidy'
