--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,9 @@ steps:
   inputs:
     targetType: 'filePath' # Optional. Options: filePath, inline
     filePath: 'myScripts/script1.sh'
+    targetType: 'filePath' # Optional. Options: filePath, inline
     filePath: 'myScripts/script2.sh'
-    filePath: 'myScripts/script3.sh'
+
 
 - task: NodeTool@0
   inputs:
