--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,12 @@ steps:
 
 - task: Bash@3
   displayName: 'Run Scripts'
-  inputs:
+  inputs: |
     targetType: 'filePath' # Optional. Options: filePath, inline
-    filePath: '[myScripts/script1.sh, myScripts/script2.sh]'
+    filePath: 'myScripts/script1.sh'
+
+    targetType: 'filePath' # Optional. Options: filePath, inline
+    filePath: 'myScripts/script2.sh'
 
 
 - task: NodeTool@0
