--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,3 @@
-//registry.npmjs.org/:_authToken=ovgchpozpsvyb3cwt65zgjkuscwllcld5t5mdlnebcpnyab2ykpa
+registry=https://pkgs.dev.azure.com/AnkushOrganization/_packaging/feed1/npm/registry/ 
+                 
+always-auth=tru
