--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 registry=https://pkgs.dev.azure.com/AnkushOrganization/_packaging/feed1/npm/registry/ 
                  
-always-auth=tru
+always-auth=true
