--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,3 +47,13 @@ steps:
     command: 'publish'
     publishRegistry: 'useFeed'
     publishFeed: 'feed1'
+
+#Download Artifact
+- task: DownloadPackage@1
+  inputs:
+    packageType: 'npm'
+    feed: '/02b60a18-37ec-4180-a722-48a7f927f4f9'
+    view: '5044ecb3-e14f-42a5-9238-20f63972d7e2'
+    definition: '59ce280b-f99b-4f71-96c5-38fd6431bad6'
+    version: '1.0.0'
+    downloadPath: '$(System.ArtifactsDirectory)'
